[MNG-8494] Restore Maven 3 compatibility